@@ -1,6 +1,11 @@
 # ChangeLog for dev-libs/apr
 # Copyright 2000-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-libs/apr/ChangeLog,v 1.102 2008/06/01 11:35:11 hollow Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-libs/apr/ChangeLog,v 1.103 2008/06/11 19:12:54 hollow Exp $
+
+*apr-1.3.0 (11 Jun 2008)
+
+  11 Jun 2008; Benedikt Böhm <hollow@gentoo.org> +apr-1.3.0.ebuild:
+  version bump wrt #225783
 
   01 Jun 2008; Benedikt Böhm <hollow@gentoo.org> apr-1.2.11.ebuild,
   apr-1.2.12.ebuild:
